changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add relevant debug flags to compilation.
 utils/cre/.qmake.cache
Nicolas Weeger 2010-03-14

Use archetype name instead of archetype itself. Show map name in list too.
 utils/cre/CREArchetypePanel.cpp CREMapInformation.{cpp,h} CREMapInformationManager.{cpp,h} CREMainWindow.cpp CREUtils.{cpp,h}
Nicolas Weeger 2010-03-14

Remove obsolete map fields in header.
 common/map.c
Nicolas Weeger 2010-03-14

Basic map browsing. Report archetype use in maps.
Modified files:
 utils/cre/cre.pro CREArchetypePanel.cpp CREMainWindow.{cpp,h}
New files:
 utils/cre/CREMapInformationManager.{cpp,h} CREMapInformation.{cpp,h}
Nicolas Weeger 2010-03-14

Sort alphabetically by default.
 utils/cre/CREAnimationPanel.cpp CREArchetypePanel.cpp CREResourcesWindow.cpp
Nicolas Weeger 2010-03-14

Display archetype use in other_arch and treasure lists.
 utils/cre/CREArchetypePanel.{cpp,h}
Nicolas Weeger 2010-03-14

Rename field 'class' to 'character_class' because that's a reserved C++
keyword and thus conflicts for CRE building.
Nicolas Weeger 2010-03-14

Update account handling - add character specific handling for the accounts,
add test case, and add some missing svn keywords.  Still some more
work to be done here
---
doc/Developers/protocol: Clean up formatting some.
include/Makefile.am: Add new file
include/account_char.h: New file for account information
include/global.h: Include account_char.h
include/newserver.h: Add references to account information to socket
include/sproto.h: Add function prototypes
socket/init.c: And initialization & cleanup for account info in socket